# seidr

./: .gitignore  CMakeLists.txt  README.md
source/projects/seidr.BinaryCounter/: seidr.BinaryCounter.cpp  seidr.BinaryCounter.hpp
source/projects/seidr.Chords/: CMakeLists.txt  seidr.Chords.cpp  seidr.Chords.hpp  seidr.Chords_test.cpp
source/projects/seidr.NCounter/: seidr.NCounter.hpp
source/projects/seidr.Quantizer/: seidr.Quantizer.hpp
source/projects/seidr.RandomOctave/: seidr.RandomOctave.hpp
source/projects/seidr.ShiftRegister/: seidr.ShiftRegister.hpp
source/projects/seidr.Waves_tilde/: seidr.Waves_tilde.cpp  seidr.Waves_tilde.hpp  seidr.Waves_tilde_test.cpp
